package org.sim;

public class Entity {
    public Point position;
    // public Texture texture

    public void Update(Biome currentBiome) {}
    public void Draw() {}
}
