package org.sim;

public class Food extends Entity {
    public FoodType Type;
    public float Energy;

}
