package org.sim.food;

import org.sim.Graphics;
import org.sim.SimManager;
import processing.core.PVector;

public class Meat extends Food {
    public static final float DefaultEnergy = 10f;
    public static final float drowningSpeed = 0.7f;

    public Meat(Graphics graphicsHandle, PVector position, float energy)
    {
        this.graphics_handle = graphicsHandle;
        this.Position= position;
        this.Energy = energy + DefaultEnergy;
    }

    // TODO Allow fish to eat just a fragment of food if they're near max?
    @Override
    public void Update()
    {
        if(Position.y + 10 < SimManager.CanvasY)
        {
            Position.y += drowningSpeed;
        }
    }

    @Override
    public float Bite(float plantToMeatDigestion, float damage)
    {
        Die();
        return Energy * plantToMeatDigestion;
    }
}
